--- a/assets/favicon/css/style.css
+++ b/assets/favicon/css/style.css
@@ -16,7 +16,7 @@ body {
     position: relative;
     left: 800px;
 }
-a:logo {
+.logo a{
     color: #9e162a;
 }
 .active {
@@ -98,7 +98,7 @@ nav a {
 }
 
 nav a:hover {
-    color: white;
+    color: #9e162a;
 }
 .hero-video {
 
@@ -111,6 +111,109 @@ nav a:hover {
     bottom: 0;
     z-index: -1;
 }
+main {
+    background: #000;
+    font-family: 'Oswald' sans-serif;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Form */
+#signup {
+    
+    background-size: cover;
+    background-position: 75%;
+    padding: 20px 10% 0 10%;
+    flex-grow: 1;
+}
+
+
+#signup-form {
+    color: #ffffff;
+    background-color: rgba(60, 60, 60, 0.6);
+    padding: 30px;
+}
+
+
+#signup-form>h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    padding: 0 5px;
+}
+
+
+.join-button {
+    position: relative;
+    left: 500px;
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px;
+    font-size: 100%;
+    background-color: #454b1b;
+    color: #fafafa;
+}
+.column-center-signup {
+    position: relative;
+    top: 300px;
+}
+
+
+/*Footer*/
+
+.motivacion {
+    position: relative;
+    left: 800px;
+    bottom: 100px;
+}
+
+.motivacion-logo{
+    position: relative;
+    bottom: 380px;
+    left: 400px;
+}
+
+#social-networks {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none
+}
+
+#social-networks i {
+    font-size: 140%;
+    padding: 5%;
+    color: #9e162a;
+}
+
+#social-networks-support {
+    text-align: center;
+    padding: 20px 0;
+    display: flex;
+    justify-content: space-evenly;
+    list-style-type: none
+}
+#social-networks-support i{
+    position: relative;
+    top: 300px;
+    font-size: 140%;
+    padding: 5%;
+    color: #9e162a;
+}
+
 
 @media (min-aspect-ratio: 16/9) {
     .back-video {
@@ -145,6 +248,25 @@ nav a:hover {
     padding: 0rem 2rem;
 }
 
+.column-left-support{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: grey;
+    padding: 0rem 2rem;
+    
+}
+
+.column-left-support h1 {
+    margin-bottom: 1rem;
+    font-size: 3rem;
+    text-transform: uppercase;
+    position: relative;
+    left: 500px;
+    top: 50px;
+}
+
 .column-left h1 {
     margin-bottom: 1rem;
     font-size: 3rem;
@@ -156,7 +278,7 @@ nav a:hover {
     line-height: 1.5rem;
 }
 
-button {
+.button {
     position: relative;
     top: 50px;
     left: 58rem;
@@ -169,7 +291,7 @@ button {
     border-radius: 50px;
 }
 
-button:hover {
+.button:hover {
     background: grey;
     color: #000;
 }
@@ -186,9 +308,18 @@ button:hover {
     
 }
 
+.column-center-support {
+    display: flex;
+    flex-direction: center;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 100px;
+    
+}
+
 .gallery-image {
     position: relative;
-    bottom: 200px;
+    top: 300px;
     left: 100px;
     width: 150px ;
     height: 150px;
