edit the last things

--- a/assets/favicon/css/style.css
+++ b/assets/favicon/css/style.css
@@ -304,7 +304,8 @@ main {
     justify-content: center;
     align-items: flex-start;
     gap: 100px;
-    
+    position: relative;
+    bottom: 500px;
     
 }
 
